搭建ssm框架，测试连接数据库成功

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
 /build/
 /target/
+
+.classpath
+.project
+.settings      
+ ##filter databfile、sln file##
+*.mdb  
+*.ldb  
+*.sln    
+##class file##
+*.com  
+*.class  
+*.dll  
+*.exe  
+*.o  
+*.so  
