--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -48,12 +48,12 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
     <!-- HTTP请求方法转换 -->
-    <filter>
+    <!-- <filter>
 	    <filter-name>HiddenHttpMethodFilter</filter-name>
 	    <filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
 	</filter>
 	<filter-mapping>
 	    <filter-name>HiddenHttpMethodFilter</filter-name>
 	    <servlet-name>spring</servlet-name>    
-	</filter-mapping>  
+	</filter-mapping>  --> 
 </web-app>
