--- a/config/mysql.properties
+++ b/config/mysql.properties
@@ -1,7 +1,7 @@
 mysql.driver=com.mysql.jdbc.Driver
 mysql.url=jdbc\:mysql\://localhost\:3306/yudong?useUnicode\=true&characterEncoding\=utf-8
 mysql.user=root
-mysql.password=
+mysql.password=root
 druid.maxActive=100
 druid.initialSize=30
 druid.minIdle=0
