--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,14 @@
 			<artifactId>javax.mail</artifactId>
 			<version>1.4.4</version>
 		</dependency>
+		
+		<!-- file-upload-download -->
+		<dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+		
 	</dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
